objects/AsiaProductItem2SP__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSelectedDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <label>Part Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityDefault__c</fullName>
        <label>Quantity Default</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>Sort No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Item 2SP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ModelType__c</columns>
        <columns>PartNumber__c</columns>
        <columns>Specification__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>AP2-{00000000}</displayFormat>
        <label>AsiaProductItem2SP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>